--- a/index.html
+++ b/index.html
@@ -33,16 +33,6 @@
         </nav>
     </header>
 
-<section class="background">
-
-    <ul>
-    
-        <li><span>ROMPEDORES</span></li>
-        <li><span>11, 16 o 30 Kg</span></li>
-    </ul>
-
-   
-</section>
 <section id="servicios" class="servicios">
     <h2>Servicios de Renta de Maquinaria Rompedora</h2>
     <p>Ofrecemos una amplia gama de maquinaria rompedora para todo tipo de proyectos. Nuestros equipos están disponibles en distintas capacidades, incluyendo 11, 16 y 30 kg, y son ideales para trabajos de demolición y construcción.</p>
@@ -52,27 +42,13 @@
         <li>Renta diaria, semanal o mensual</li>
         <li>Envíos logísticos a todo Monterrey</li>
         <li>Asesoría personalizada para seleccionar el equipo adecuado</li>
-        <li>Atención al cliente 24/7</li>
     </ul>
     <h3>Contacta con Nosotros</h3>
-    <p>Para más información o para realizar una reserva, llámanos al <strong>(81) 34179056</strong> o envíanos un correo electrónico.</p>
+    <p>Para más información o para realizar una reserva, llámanos al <strong>(81) 34179056</strong>, <strong>(81)8117389778</strong> o envíanos un correo electrónico.</p>
 </section>
 
-<section class="infoRand">
-    <ul >
-        <li>         
-            <li><p>envíos logisticos a todo Monterrey, MX.</p></li>
-            <li><span>¿Quieres asesoría personal?</span></li>
-            <li><span>(81) 34179056</span></li>
-      
-       </li>
-    </ul>
-
-
-</section>
 <section class="Precios">
 
-    <h1>Precios</h1>
 
     <ul>
         <li id="tiempo"> Día</li>
@@ -96,6 +72,12 @@
         <li>
             <a href="images/Articulos/martillo-demoledor-rompedor-dewalt-30kg-d25980-de-30-kgs-D_NQ_NP_847336-MLM26451668370_112017-F.jpg">
                 <img src="images/Articulos/martillo-demoledor-rompedor-dewalt-30kg-d25980-de-30-kgs-D_NQ_NP_847336-MLM26451668370_112017-F.jpg" alt="Martillo Demoledor 30kg">
+            </a>
+            <a href="https://wa.me/521XXXXXXXXXX?text=Hola,%20estoy%20interesado%20en%20rentar%20el%20martillo%20demoledor%20de%2030kg.">
+                <button class="whatsapp-button">Consultar por WhatsApp</button>
+            </a>
+            <a href="images/Articulos/martillo-demoledor-rompedor-dewalt-30kg-d25980-de-30-kgs-D_NQ_NP_847336-MLM26451668370_112017-F.jpg">
+                <img src="images/Articulos/makita.jpg" alt="Martillo Demoledor 30kg">
             </a>
             <a href="https://wa.me/521XXXXXXXXXX?text=Hola,%20estoy%20interesado%20en%20rentar%20el%20martillo%20demoledor%20de%2030kg.">
                 <button class="whatsapp-button">Consultar por WhatsApp</button>
