--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -77,7 +77,7 @@
     </section>
 
     <section class="btnback">
-        <button class="btnBack"><a href="index" >
+        <button class="btnBack"><a href="index.html" >
             Volver
         </a></button>
         
