--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -77,7 +77,7 @@
     </section>
 
     <section class="btnback">
-        <button class="btnBack"><a href="https://brahame123.github.io/RompeRENTA.github.io/">
+        <button class="btnBack"><a href="https://brahame123.github.io/RompeRENTA.github.io/#">
             Volver
         </a></button>
         
