--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -77,9 +77,10 @@
     </section>
 
     <section class="btnback">
-        <button class="btnBack"><a href="https://brahame123.github.io/RompeRENTA.github.io/#">
-            Volver
-        </a></button>
+        <a href="https://brahame123.github.io/RompeRENTA.github.io/#">
+        <button class="btnBack">Volver</button>
+            
+        </a>
         
     </section>
 
