--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
          <nav class="socials">
             <ul>
-                <li><a href="mailto:victordg207@gmail.com"><img src="images/socials/mail.png" alt=""></a></li>
+                <li><a href="mailto:victordg207@gmail.com" onclick="showMSG()"><img src="images/socials/mail.png" alt=""></a></li>
                 <li><a href="#twitter"><img src="images/socials/twitter.png" alt=""></a></li>
             </ul>
                 
