--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RompeRenta</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 
 </head>
 <body>
@@ -21,7 +22,7 @@
          <nav class="socials">
             <ul>
                 <li><a href="mailto:victordg207@gmail.com" onclick="showMSG()"><img src="images/socials/mail.png" alt=""></a></li>
-                <li><a href="#twitter"><img src="images/socials/twitter.png" alt=""></a></li>
+                <li><a href="#twitter"><img src="images/socials/twitter.png" alt="" onclick="showMSG()"></a></li>
             </ul>
                 
         </nav>
