JavScript Articles Transitions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>RompeRenta</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="JS/Wpp.js"></script>
+    <script src="JS/visible.js"></script>
     
 
 </head>
