--- a/index.html
+++ b/index.html
@@ -71,22 +71,21 @@
 </section>
 
 
-
 <section class="articulos">
+    <script src="JS/Wpp.js"></script>
+
     <ul>
-        <li>
+        <li id="rompedoraProfesionalID">
             <a href="images/Articulos/martillo-demoledor-rompedor-dewalt-30kg-d25980-de-30-kgs-D_NQ_NP_847336-MLM26451668370_112017-F.jpg">
                 <img src="images/Articulos/martillo-demoledor-rompedor-dewalt-30kg-d25980-de-30-kgs-D_NQ_NP_847336-MLM26451668370_112017-F.jpg" alt="Martillo Demoledor 30kg">
             </a>
-            <a href="https://wa.me/521XXXXXXXXXX?text=Hola,%20estoy%20interesado%20en%20rentar%20el%20martillo%20demoledor%20de%2030kg.">
-                <button class="whatsapp-button">Consultar por WhatsApp</button>
-            </a>
-            <a href="images/Articulos/martillo-demoledor-rompedor-dewalt-30kg-d25980-de-30-kgs-D_NQ_NP_847336-MLM26451668370_112017-F.jpg">
+            <button class="whatsapp-button">Consultar por WhatsApp</button>
+        </li>
+        <li id="makitaID">
+            <a href="images/Articulos/makita.jpg">
                 <img src="images/Articulos/makita.jpg" alt="Martillo Demoledor 30kg">
             </a>
-            <a href="https://wa.me/521XXXXXXXXXX?text=Hola,%20estoy%20interesado%20en%20rentar%20el%20martillo%20demoledor%20de%2030kg.">
-                <button class="whatsapp-button">Consultar por WhatsApp</button>
-            </a>
+            <button class="whatsapp-button">Consultar por WhatsApp</button>
         </li>
         <!-- Repite la estructura de arriba para cada artículo -->
     </ul>
