Slight Changes on main page

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     </ul>
 
 </section>
+<div class="backColor">
+    <div class="articlesHead">
+        <h1>Rompedoras en Renta</h1>
+    </div>
+</div>
 
 
 <section class="articulos">
