--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -24,8 +24,7 @@
          <nav class="socials">
             <ul>
                 <li><a href="mailto:victordg207@gmail.com"><img src="images/socials/mail.png" alt=""></a></li>
-                <li><a href="#twitter">
-                    <img src="images/socials/twitter.png" alt=""></a></li>
+                <li><a href="#whatsapp"><img src="images/socials/twitter.png" alt=""></a></li>
             </ul>
                 
         </nav>
