Whatsapp Icon Working properly
adds functionality to the whatsapp btn on the top right of the header

--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -6,7 +6,7 @@
     <title>Politicas</title>
     <link rel="stylesheet" href="styles/politicstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="OtherJS/WppPersonal.js"></script>
 </head>
 <body>
     <header>
@@ -23,8 +23,8 @@
         </nav>
          <nav class="socials">
             <ul>
-                <li><a href="mailto:victordg207@gmail.com"><img src="images/socials/mail.png" alt=""></a></li>
-                <li><a href="#whatsapp"><img src="images/socials/twitter.png" alt=""></a></li>
+                <li><a href="mailto:victordg207@gmail.com"><img src="images/socials/mail.png" alt="mail.png"></a></li>
+                <li><a href="#whatsapp" class="whatsapp-button"><img src="images/socials/twitter.png" alt="whatsapp.png"></a></li>
             </ul>
                 
         </nav>
