--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RompeRenta</title>
     <link rel="stylesheet" href="style.css">
-
+    <script src="JS/WppPersonal.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 
@@ -23,7 +23,7 @@
          <nav class="socials">
             <ul>
                 <li><a href="mailto:victordg207@gmail.com" onclick="showMSG()"><img src="images/socials/mail.png" alt=""></a></li>
-                <li><a href="#whatsapp"><img src="images/socials/whatsapp.png" alt="whatsapp.icon"></a></li>
+                <li><a href="#whatsapp" class="whatsapp-button"><img src="images/socials/whatsapp.png" alt="whatsapp.icon"></a></li>
             </ul>
                 
         </nav>
