Bugs Presumedly fixed....

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <nav class="socials">
             <ul>
                 <li><a href="mailto:victordg207@gmail.com" onclick="showMSG()"><img src="images/socials/mail.png" alt=""></a></li>
-                <li><a href="#whatsapp" class="whatsapp-button"><img src="images/socials/whatsapp.png" alt="whatsapp.icon"></a></li>
+                <li><a href="#whatsapp" class="whatsapp-btn"><img src="images/socials/whatsapp.png" alt="whatsapp.icon"></a></li>
             </ul>
                 
         </nav>
