--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -24,7 +24,7 @@
          <nav class="socials">
             <ul>
                 <li><a href="mailto:victordg207@gmail.com"><img src="images/socials/mail.png" alt="mail.png"></a></li>
-                <li><a href="#whatsapp" class="whatsapp-button"><img src="images/socials/twitter.png" alt="whatsapp.png"></a></li>
+                <li><a href="#whatsapp" class="whatsapp-btn"><img src="images/socials/whatsapp.png" alt="whatsapp.png"></a></li>
             </ul>
                 
         </nav>
