--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <nav class="socials">
             <ul>
                 <li><a href="mailto:victordg207@gmail.com" onclick="showMSG()"><img src="images/socials/mail.png" alt=""></a></li>
-                <li><a href="#whatsapp" class="whatsapp-btn"><img src="images/socials/whatsapp.png" alt="whatsapp.icon"></a></li>
+                <li><button class="whatsapp-btn"><img src="images/socials/whatsapp.png" alt="whatsapp"></button></li>
             </ul>
                 
         </nav>
@@ -101,6 +101,7 @@
 <script src="JS/Wpp.js"></script>
 <script src="JS/visible.js"></script>
 <script src="JS/priceShow.js"></script>
+<script src="JS/WppPersonal.js"></script>
 
 
 </body>
