2bttn option whatsapp article

--- a/index.html
+++ b/index.html
@@ -78,21 +78,28 @@
     </div>
 </div>
 
-
 <section class="articulos">
 
+    
     <ul>
-        <li id="rompedoraProfesionalID">
+        <li id="rompedoraProfesionalID" class="articulo-item">
             <a href="images/Articulos/martillo-demoledor-rompedor-dewalt-30kg-d25980-de-30-kgs-D_NQ_NP_847336-MLM26451668370_112017-F.jpg">
                 <img src="images/Articulos/martillo-demoledor-rompedor-dewalt-30kg-d25980-de-30-kgs-D_NQ_NP_847336-MLM26451668370_112017-F.jpg" alt="Martillo Demoledor 30kg">
             </a>
-            <button class="whatsapp-button">Consultar por WhatsApp</button>
+            <div class="buttons-container">
+                <button class="whatsapp-button">Consultar por WhatsApp 1</button>
+                <button class="whatsapp-button">Consultar por WhatsApp 2</button>
+            </div>
+
         </li>
-        <li id="makitaID">
+        <li id="makitaID" class="articulo-item">
             <a href="images/Articulos/makita.jpg">
                 <img src="images/Articulos/makita.jpg" alt="Martillo Demoledor 30kg">
             </a>
-            <button class="whatsapp-button">Consultar por WhatsApp</button>
+            <div class="buttons-container">
+                <button class="whatsapp-button">Consultar por WhatsApp 1</button>
+                <button class="whatsapp-button">Consultar por WhatsApp 2</button>
+            </div>
         </li>
         <!-- Repite la estructura de arriba para cada artículo -->
     </ul>
