--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </a>
             <div class="buttons-container">
                 <button class="whatsapp-button">Consultar por WhatsApp 1</button>
-                <button class="whatsapp-button">Consultar por WhatsApp 2</button>
+                <button class="whatsapp-btn">Consultar por WhatsApp 2</button>
             </div>
 
         </li>
@@ -98,7 +98,7 @@
             </a>
             <div class="buttons-container">
                 <button class="whatsapp-button">Consultar por WhatsApp 1</button>
-                <button class="whatsapp-button">Consultar por WhatsApp 2</button>
+                <button class="whatsapp-btn">Consultar por WhatsApp 2</button>
             </div>
         </li>
         <!-- Repite la estructura de arriba para cada artículo -->
