--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </a>
             <div class="buttons-container">
                 <button class="whatsapp-button">Consultar por WhatsApp 1</button>
-                <button class="whatsapp-btn">Consultar por WhatsApp 2</button>
+                <button class="whatsapp-btn2">Consultar por WhatsApp 2</button>
             </div>
 
         </li>
@@ -98,7 +98,7 @@
             </a>
             <div class="buttons-container">
                 <button class="whatsapp-button">Consultar por WhatsApp 1</button>
-                <button class="whatsapp-btn">Consultar por WhatsApp 2</button>
+                <button class="whatsapp-btn2">Consultar por WhatsApp 2</button>
             </div>
         </li>
         <!-- Repite la estructura de arriba para cada artículo -->
@@ -109,6 +109,7 @@
 <script src="JS/visible.js"></script>
 <script src="JS/priceShow.js"></script>
 <script src="JS/WppPersonal.js"></script>
+<script src="JS/WppContact2.js"></script>
 
 
 </body>
