Reglas de renta

--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -60,22 +60,26 @@
     </section>
 
     <section class="InfoPolitica"> 
-        <p> ACTA CONSTITUTIVA DE LA EMPRESA</p>
-        <p>INE DE REPRESENTANTE LEGAL DE LA
-            EMPRESA</p>
-        <p>CARTA MEMBRETADA FIRMADA POR EL REPRESENTANTE LEGAL, AUTORIZANDO A SU PERSONAL PARA LA FIRMA DEL CONTRATO DE ARRENDAMIENTO EN CASO DE NO REALIZAR EL TRÁMITE
+        <p> Acta constitutiva de la empresa.</p>
+        <p>INE de representante legal de la empresa./p>
+        <p>Carta membretada firmada por el representante legal, atorizando  su personal para la firma del contrato de arrendamiento n aso de no realizar el trámite.
         </p>
-        <p>INE DE LA PERSONA AUTORIZADA
-        </p>
-        <p>CONSTANCIA DE SITUACIÓN FISCAL
-            ACTUALIZADA
-            </p>
-        <p>COMPROBANTE DE DOMICILIO DE LA
-            EMPRESA
-            </p>
-        <p>FIRMA DE CONTRATO DE ARRENDAMIENTO</p>
-        <p>PAGO DEL ARRENDAMIENTO POR
-            ADELANTADO</p>
+        <p>INE de la persona autorizada.</p>
+        <p>Constancia de situación fiscal actualizada. </p>
+        <p>Comprobante de domicilio de la empresa.</p>
+        <p>Firma de contrato de arrendamiento.</p>
+        <p>Pago del arrendamiento por
+            adelantado.</p>
+    </section>
+
+    <section class="headerInfo" id="cuidados"><h1>Cuidados de la máquina.</h1></section>
+    <section class="InfoPolitica">
+        <p>No usar la maquina por más de 30 minutos continuos.</p>
+        <p>Cuidar el cable de NO partirlo.</p>
+        <p>No usar la máquina con una extensión muy larga.</p>
+        <p>No mojar la maquina.</p>
+        <p>Resguardarla en un lugar seguro.</p>
+        <p>Cuidar el cincel de la máquina.</p>
     </section>
 
     <section class="btnback">
