--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
         <!-- Repite la estructura de arriba para cada artículo -->
     </ul>
 </section>
-
+<footer>
+    Todos los derechos a RompeRenta.
+</footer>
 <script src="JS/Wpp.js"></script>
 <script src="JS/visible.js"></script>
 <script src="JS/priceShow.js"></script>
