--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -13,7 +13,7 @@
         
         <nav class="InfoContact">
             <ul>
-                <li><a href="Pages/politics.html">Politicas de Renta</a></li>
+                <li><a href="politics.html">Politicas de Renta</a></li>
                 <li><a href="#AcercaDeNosotros">Nosotros</a></li>
 
             </ul>
