--- a/index.html
+++ b/index.html
@@ -60,16 +60,17 @@
 
     <ul>
         <li id="tiempo"> Día</li>
-        <li id="costo">$450</li>
+        <li id="costo"><span>$450</span></li>
     </ul>
     <ul> 
         <li id="tiempo"> Semana</li>
-        <li id="costo">$2900</li>
+        <li id="costo"><span>$2,900</span></li>
     </ul>
     <ul> 
         <li id="tiempo"> Mes</li>
-        <li id="costo">$9,400</li>
+        <li id="costo"><span>$9,400</span></li>
     </ul>
+
 
 </section>
 <div class="backColor">
