Significant Visual Changes

--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
         <!-- Repite la estructura de arriba para cada artículo -->
     </ul>
 </section>
+<section class="Renta">
+    <h1>¿Quieres Rentar?</h1>
+    <p>lee nuestras reglas y condiciones aqui!</p> 
+    <a href="Pages/politics.html">Politicas de Renta</a>
+
+</section>
+
+
+
 <footer>
     Todos los derechos a RompeRenta.
 </footer>
