--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="InfoContact">
             <ul>
                 <li><a href="Pages/politics.html">Politicas de Renta</a></li>
-                <li><a href="#AcercaDeNosotros">Nosotros</a></li>
+                <li><a href="Pages/Aboutus.html">Nosotros</a></li>
 
             </ul>
            
