--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -10,8 +10,8 @@
     <header>
         <nav class="InfoContact">
             <ul>
-                <li><a href="Pages/politics.html">Politicas de Renta</a></li>
-                <li><a href="#AcercaDeNosotros">Nosotros</a></li>
+                <li><a href="politics.html">Politicas de Renta</a></li>
+                <li><a href="#">Nosotros</a></li>
                 
             </ul>
            
