--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -14,7 +14,7 @@
         <nav class="InfoContact">
             <ul>
                 <li><a href="politics.html">Politicas de Renta</a></li>
-                <li><a href="#AcercaDeNosotros">Nosotros</a></li>
+                <li><a href="Aboutus.html">Nosotros</a></li>
 
             </ul>
            
