--- a/Pages/Aboutus.html
+++ b/Pages/Aboutus.html
@@ -11,7 +11,7 @@
         <nav class="InfoContact">
             <ul>
                 <li><a href="politics.html">Politicas de Renta</a></li>
-                <li><a href="#">Nosotros</a></li>
+                <li><a href="Aboutus.html">Nosotros</a></li>
                 
             </ul>
            
