changes on header links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <nav class="InfoContact">
             <ul>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="Pages/politics.html">Politicas de Renta</a></li>
-                <li><a href="Pages/Aboutus.html">Nosotros</a></li>
 
             </ul>
            
