--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -13,8 +13,8 @@
         
         <nav class="InfoContact">
             <ul>
+                <li><a href="https://brahame123.github.io/RompeRENTA.github.io/#">Inicio</a></li>
                 <li><a href="politics.html">Politicas de Renta</a></li>
-                <li><a href="Aboutus.html">Nosotros</a></li>
 
             </ul>
            
