Client Visual Fixes

--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -81,6 +81,8 @@
         <p>No mojar la maquina.</p>
         <p>Resguardarla en un lugar seguro.</p>
         <p>Cuidar el cincel de la máquina.</p>
+        <p>En caso de cualquier desperfecto del equipo se harán cobros extra.</p>
+        <p>En caso de dañar la máquina o perdida total del equípo, se harán cobros extra.</p>
     </section>
 
     <section class="btnback">
