--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section id="servicios" class="servicios">
         <h2>Servicios de Renta de Maquinaria Rompedora</h2>
-        <p>Ofrecemos una amplia gama de maquinaria rompedora para todo tipo de proyectos. Nuestros equipos están disponibles en distintas capacidades, incluyendo 11, 16 y 30 kg, y son ideales para trabajos de demolición y construcción.</p>
+        <p>Ofrecemos una amplia gama de maquinaria rompedora para todo tipo de proyectos. Nuestros equipos están disponibles en distintas capacidades, incluyendo 16 y 30 kg, y son ideales para trabajos de demolición y construcción.</p>
         <p>Todos nuestros equipos son de las mejores marcas y están en excelentes condiciones para garantizar la máxima eficiencia en tus proyectos.</p>
         <h3>Nuestros Servicios Incluyen:</h3>
         <ul>
