--- a/Pages/politics.html
+++ b/Pages/politics.html
@@ -21,7 +21,7 @@
         </nav>
          <nav class="socials">
             <ul>
-                <li><a href="mailto:victordg207@gmail.com"><img src="images/socials/mail.png" alt="mail.png"></a></li>
+                <li><a href="mailto:paloma.mty@icloud.com"><img src="images/socials/mail.png" alt="mail.png"></a></li>
                 <li><button class="whatsapp-btn"><img src="images/socials/whatsapp.png" alt="whatsapp"></button></li>
 
             </ul>
@@ -100,6 +100,12 @@
         Todos los derechos a RompeRenta.
 
     </footer>
+    <script src="JS/Wpp.js"></script>
+    <script src="JS/visible.js"></script>
+    <script src="JS/priceShow.js"></script>
+    <script src="JS/WppPersonal.js"></script>
+    <script src="JS/WppContact2.js"></script>
+
 
 </body>
 </html>
